# rust_crop_img

./: Cargo.toml  README.md  main.rs
