[package]
name = "imghandle"
version = "0.1.0"
authors = ["CarterTsai <hamming1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.12"
walkdir = "2.3.1"

[[bin]]
name = "imghandle"
path = "main.rs"
